// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1xvc5bb"
      >
        Actor
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-1i2cn7r"
      >
        App
      </div>
    </div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1xvc5bb"
      >
        App_id
      </div>
      <span
        class="rcx-skeleton rcx-skeleton--text"
      />
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-1i2cn7r"
      >
        app-id
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NoAppInfo without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1xvc5bb"
      >
        Actor
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-1i2cn7r"
      >
        App
      </div>
    </div>
    <div
      class="rcx-box rcx-box--full rcx-css-op9h3g"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-1xvc5bb"
      >
        App Id
      </div>
      <span
        class="rcx-skeleton rcx-skeleton--text"
      />
      <div
        class="rcx-box rcx-box--full rcx-css-6hwe8l rcx-css-1i2cn7r"
      >
        app-id
      </div>
    </div>
  </div>
</body>
`;
